--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "gradio>=6.0.1",
     "langchain-community>=0.4.1",
     "langchain-core>=1.1.0",
     "langchain-openai>=1.1.0",
