debug Postgres support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-core>=1.1.0",
     "langchain-openai>=1.1.0",
+    "langchain-postgres>=0.0.16",
+    "psycopg>=3.2.13",
+    "psycopg2-binary>=2.9.11",
     "pypdf>=6.4.0",
     "python-dotenv>=1.2.1",
     "tiktoken>=0.12.0",
