--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ dependencies = [
     "langchain-core>=1.1.0",
     "langchain-openai>=1.1.0",
     "langchain-postgres>=0.0.16",
+    "langchain-qdrant>=1.0.0",
     "psycopg>=3.2.13",
     "psycopg2-binary>=2.9.11",
     "pypdf>=6.4.0",
     "python-dotenv>=1.2.1",
+    "qdrant-client>=1.12.0",
     "tiktoken>=0.12.0",
 ]
